kubernetes/infrastructure/longhorn/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-manager
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: manager
      app.kubernetes.io/instance: longhorn
  ingress:
    - fromEntities:
        - cluster
        - ingress
  egress:
    - toEntities:
        - cluster
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-instance-manager
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: instance-manager
      app.kubernetes.io/instance: longhorn
  egress:
    - toEntities:
        - cluster
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: ui
      app.kubernetes.io/instance: longhorn
  ingress:
    - fromEntities:
        - cluster
        - ingress
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-csi
  namespace: longhorn-system
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/component
        operator: In
        values:
          - csi-controller
          - csi-plugin
          - driver-deployer
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - cluster
